--- a/.github/workflows/docker-build-opengl.yaml
+++ b/.github/workflows/docker-build-opengl.yaml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   build:
+    name: Build OpenGL Desktop Images (${{ github.event_name }})
     runs-on: 
       - lcas
     strategy:
@@ -36,6 +37,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: What
       run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
     - name: Docker Login LCAS
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
