--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   build:
+    name: Build ROS Base Images (${{ github.event_name }})
     runs-on: ubuntu-latest
     strategy:
         matrix:
@@ -27,8 +28,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: What
       run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
     - name: Docker Login LCAS
-      if: ${{ github.event_name != 'pull_request' }}
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       uses: docker/login-action@v3
