--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   build:
+    name: Build ${{ matrix.tag }} base image (${{ github.event_name }} by ${{ github.actor }})
     runs-on: ubuntu-latest
     strategy:
         matrix:
@@ -27,8 +28,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: What
       run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
     - name: Docker Login LCAS
-      if: ${{ github.event_name != 'pull_request' }}
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       uses: docker/login-action@v3
@@ -48,14 +49,45 @@ jobs:
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: "image name from repo name"
+      id: docker_image_name
+      run: echo "docker_image=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' |sed 's/[^0-9,a-z,A-Z,=,_,\/]/-/g' >>${GITHUB_OUTPUT}
+    
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        flavor: |
+          latest=false
+        labels: |
+          org.opencontainers.image.description=L-CAS ROS2 Docker Image (flavour: ${{ matrix.tag }}, multiarch)
+          org.opencontainers.image.authors=L-CAS Team
+        # list of Docker images to use as base name for tags
+        images: |
+          lcas.lincoln.ac.uk/${{ steps.docker_image_name.outputs.docker_image }}
+        # generate Docker tags based on the following events/attributes
+        tags: |
+          type=raw,value=${{ matrix.tag }}-staging
+          type=raw,enable=${{ github.event_name != 'pull_request' }},value=${{ matrix.tag }}
+          type=ref,enable=${{ github.event_name != 'pull_request' }},event=branch,prefix=${{ matrix.tag }}-
+          type=semver,pattern={{version}},prefix=${{ matrix.tag }}-
+          type=semver,pattern={{major}}.{{minor}},prefix=${{ matrix.tag }}-
+          type=semver,pattern={{major}},prefix=${{ matrix.tag }}-
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+        
     - name: Build Docker Image
       uses: docker/build-push-action@v5
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: lcas.lincoln.ac.uk/lcas/ros:${{ matrix.tag }}
+        platforms: linux/amd64,linux/arm64
+        push: true
+        cache-from: type=registry,ref=lcas.lincoln.ac.uk/cache/${{ steps.docker_image_name.outputs.docker_image }}:${{ matrix.tag }}
+        cache-to: type=registry,ref=lcas.lincoln.ac.uk/cache/${{ steps.docker_image_name.outputs.docker_image }}:${{ matrix.tag }},mode=max
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         build-args: |
             BASE_IMAGE=ros:${{ matrix.tag }}
             BRANCH=${{ env.BRANCH }}
